[Aalekh] ADD: Added celebrity functionality
