# app/serializers/celebrity_serializer.rb
@@ -1,0 +1,11 @@
+class CelebritySerializer < ActiveModel::Serializer
+  attributes :id, :name, :age, :birth_date, :nationality, :biography, :image_url
+
+  def birth_date
+    object.birth_date.to_s
+  end
+
+  def image_url
+    object.image.attached? ? object.image.service.url(object.image.key, secure: true) : nil
+  end
+end
