# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_24_085406) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_26_054919) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -62,6 +62,15 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_24_085406) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.index ["email"], name: "index_admin_users_on_email", unique: true
+  end
+
+  create_table "celebrities", force: :cascade do |t|
+    t.string "name", null: false
+    t.date "birth_date", null: false
+    t.string "nationality", null: false
+    t.text "biography", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
   end
 
   create_table "jwt_blacklists", force: :cascade do |t|
